--- a/.github/workflows/dast-zap-full.yml
+++ b/.github/workflows/dast-zap-full.yml
@@ -16,6 +16,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Evita o crash do Spring por YAML com conflitos no CI
+      - name: Remove application.yml (CI only)
+        shell: bash
+        run: |
+          if [ -f src/main/resources/application.yml ]; then
+            rm -f src/main/resources/application.yml
+          fi
+
       - name: Setup JDK 21 (build)
         uses: actions/setup-java@v4
         with:
@@ -55,7 +63,6 @@ jobs:
         shell: bash
         run: |
           echo "JARs em build/libs:"; ls -lah build/libs || true
-          # pega o boot jar (ignora -plain.jar)
           JAR="$(ls build/libs/*.jar 2>/dev/null | grep -v 'plain\.jar' | head -n1)"
           if [ -z "$JAR" ]; then
             echo "Boot JAR não encontrado em build/libs"; exit 1
@@ -70,7 +77,7 @@ jobs:
             -e SPRING_DATASOURCE_PASSWORD=postgres \
             -e SPRING_JPA_HIBERNATE_DDL_AUTO=update \
             -v "$PWD":/work -w /work openjdk:21-jdk \
-            sh -lc 'java $JAVA_OPTS -jar "'"$JAR"'"'
+            sh -lc 'java -Dspring.config.name=ignoreme -jar "'"$JAR"'"'
 
       - name: Verify app container is up (fail fast)
         shell: bash
@@ -78,7 +85,7 @@ jobs:
           echo "---- docker ps -a ----"
           docker ps -a
           if [ "$(docker inspect -f '{{.State.Running}}' app 2>/dev/null)" != "true" ]; then
-            echo "❌ app container NÃO está rodando. Logs:"
+            echo "app container NÃO está rodando. Logs:"
             docker logs app || true
             exit 1
           fi
@@ -86,27 +93,25 @@ jobs:
       - name: Wait for readiness (Tomcat log or /vuln/echo)
         shell: bash
         run: |
-          # tenta detectar o log do Tomcat "started on port"
+          READY=""
           for i in {1..90}; do
             if docker logs app 2>&1 | grep -qE "Tomcat.*started on port 8080"; then
-              echo "✅ Tomcat started"; READY=1; break; fi
+              echo "Tomcat started"; READY=1; break; fi
             echo "aguardando Tomcat... ($i)"; sleep 2
           done
-          # se não viu o log, faz health via IP
           if [ -z "$READY" ]; then
             APP_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' app)
             echo "APP_IP=$APP_IP"
-            [ -n "$APP_IP" ] || { echo "❌ app sem IP"; docker logs app || true; exit 1; }
+            [ -n "$APP_IP" ] || { echo "app sem IP"; docker logs app || true; exit 1; }
             for i in {1..60}; do
               docker run --rm --network zapnet curlimages/curl:8.9.1 -sSf \
-                "http://$APP_IP:8080/vuln/echo?q=ping" >/dev/null && { echo "✅ App OK por health"; break; }
+                "http://$APP_IP:8080/vuln/echo?q=ping" >/dev/null && { echo "App OK por health"; READY=1; break; }
               echo "aguardando health... ($i)"; sleep 3
             done
           fi
-          # verificação final
           docker run --rm --network zapnet curlimages/curl:8.9.1 -sSf \
             "http://app:8080/vuln/echo?q=ready" >/dev/null \
-            || { echo "❌ App não respondeu ao health"; docker logs app || true; exit 1; }
+            || { echo "App não respondeu ao health"; docker logs app || true; exit 1; }
 
       - name: Prep output dir
         shell: bash
@@ -140,10 +145,10 @@ jobs:
           HIGHS=$(jq '[.site[]?.alerts[]? | select(.risk=="High" or .risk=="Critical" or (.riskdesc|test("^(High|Critical)")))] | length' zap-out/zap-full.json)
           echo "High/Critical findings: $HIGHS"
           if [ "$HIGHS" -gt 0 ]; then
-            echo "❌ Falhando pipeline por findings High/Critical."
+            echo "Falhando pipeline por findings High/Critical."
             exit 1
           fi
-          echo "✅ Sem High/Critical."
+          echo "Sem High/Critical."
 
       - name: Upload reports
         if: always()
