--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,89 +1,60 @@
-<<<<<<< HEAD
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow file requires a free account on Semgrep.dev to
-# manage rules, file ignores, notifications, and more.
-#
-# See https://semgrep.dev/docs
-
-=======
->>>>>>> cf0a818 (Atualizaçcao de pasta vuln - Vulnerabilidade Intencional)
 name: Semgrep
 
 on:
   push:
-<<<<<<< HEAD
     branches: [ "main", "CI-CD" ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ "main" ]
   schedule:
     - cron: '30 3 * * 4'
+  workflow_dispatch:
 
 permissions:
   contents: read
+  security-events: write
+  actions: read
 
 jobs:
   semgrep:
-    permissions:
-      contents: read           # for actions/checkout to fetch code
-      security-events: write   # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read            # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    name: Scan
+    name: Semgrep SAST
     runs-on: ubuntu-latest
-    steps:
-      # Checkout project source
-      - uses: actions/checkout@v4
+    env:
+      # Mapeia o secret para checagem condicional
+      SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
 
-      # Scan code using project's configuration on https://semgrep.dev/manage
-      # Gera SARIF (scan com policy) e aplica o gate da policy (ci)
-      - uses: returntocorp/semgrep-action@fcd5ab7459e8d91cb1777481980d1b18b4fc6735
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Caminho A: usa Semgrep Cloud se houver token (policy, dashboards, etc.)
+      - name: Run Semgrep (Cloud) with policy gate
+        if: ${{ env.SEMGREP_APP_TOKEN != '' }}
+        uses: returntocorp/semgrep-action@fcd5ab7459e8d91cb1777481980d1b18b4fc6735
         with:
           publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
           generateSarif: "1"
-          # Opcional: force o gate em push/pull_request (padrão já cobre PR)
+          # Opcional: force audit também em push (além de PR)
           # auditOn: "push,pull_request"
 
-      # Upload SARIF file generated in previous step (mesmo se o gate falhar)
-      - name: Upload SARIF file
+      # Caminho B: fallback local (sem token). Usa packs OWASP + Java + .semgrep.yml e falha em ERROR
+      - name: Install Semgrep (fallback)
+        if: ${{ env.SEMGREP_APP_TOKEN == '' }}
+        run: pipx install semgrep
+
+      - name: Run Semgrep (local) — OWASP + Java (gate em ERROR)
+        if: ${{ env.SEMGREP_APP_TOKEN == '' }}
+        run: |
+          # Usa configs públicas e, se existir, suas regras locais
+          CONFIGS="--config p/owasp-top-ten --config p/java"
+          test -f .semgrep.yml && CONFIGS="$CONFIGS --config .semgrep.yml" || true
+          semgrep $CONFIGS \
+            --severity=ERROR --error \
+            --sarif --output semgrep.sarif
+
+      # Upload do SARIF (funciona para os dois caminhos)
+      - name: Upload SARIF
         if: always()
-=======
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-jobs:
-  semgrep:
-    name: Run Semgrep with auto-config
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      security-events: write
-
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v4
-
-      - name: Instalar Semgrep
-        run: pip install semgrep
-
-      - name: Rodar Semgrep com auto-config e saída SARIF
-        run: semgrep scan --config=auto --sarif --output=semgrep.sarif
-
-      - name: Upload do resultado SARIF
->>>>>>> cf0a818 (Atualizaçcao de pasta vuln - Vulnerabilidade Intencional)
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
 
-<<<<<<< HEAD
-=======
-
-
-
->>>>>>> cf0a818 (Atualizaçcao de pasta vuln - Vulnerabilidade Intencional)
